<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/stop_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stop_playing"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/play_ringtone"
        app:layout_constraintTop_toBottomOf="@+id/play_alarm" />

    <Button
        android:id="@+id/stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stop_service"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/play_ringtone"
        app:layout_constraintTop_toBottomOf="@+id/stop_playing" />

    <Button
        android:id="@+id/play_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/play_alarm"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/play_ringtone"
        app:layout_constraintTop_toBottomOf="@+id/play_ringtone" />

    <Button
        android:id="@+id/play_ringtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/play_ringtone"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_status" />

    <TextView
        android:id="@+id/play_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/play_status_text_default"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>